--- a/SAMP_API_ONE_HEADER/SAMP_API_ONE_HEADER.vcxproj
+++ b/SAMP_API_ONE_HEADER/SAMP_API_ONE_HEADER.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetExt>.ASI</TargetExt>
     <ExecutablePath>$(VC_ExecutablePath_x86);$(WindowsSDK_ExecutablePath);$(VS_ExecutablePath);$(MSBuild_ExecutablePath);$(SystemRoot)\SysWow64;$(FxCopDir);$(PATH)</ExecutablePath>
-    <LibraryPath>$(MSBuildProjectDirectory)\MinHook;$(MSBuildProjectDirectory)\DirectX;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
+    <LibraryPath>$(MSBuildProjectDirectory)\DirectX;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -142,6 +142,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="imgui\imgui.cpp" />
+    <ClCompile Include="imgui\imgui_demo.cpp" />
+    <ClCompile Include="imgui\imgui_draw.cpp" />
+    <ClCompile Include="imgui\imgui_impl_dx9.cpp" />
+    <ClCompile Include="imgui\imgui_impl_win32.cpp" />
+    <ClCompile Include="imgui\imgui_tables.cpp" />
+    <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="injector\hde\hde32.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SAMP\RakNet\BitStream.cpp" />
@@ -184,6 +191,14 @@
     <ClCompile Include="SAMP\samp_netencr.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="imgui\imconfig.h" />
+    <ClInclude Include="imgui\imgui.h" />
+    <ClInclude Include="imgui\imgui_impl_dx9.h" />
+    <ClInclude Include="imgui\imgui_impl_win32.h" />
+    <ClInclude Include="imgui\imgui_internal.h" />
+    <ClInclude Include="imgui\imstb_rectpack.h" />
+    <ClInclude Include="imgui\imstb_textedit.h" />
+    <ClInclude Include="imgui\imstb_truetype.h" />
     <ClInclude Include="injector\disassembler.hpp" />
     <ClInclude Include="injector\hde\hde32.h" />
     <ClInclude Include="injector\hde\table32.h" />
@@ -191,6 +206,7 @@
     <ClInclude Include="injector\injector.hpp" />
     <ClInclude Include="injector\invoker.hpp" />
     <ClInclude Include="injector\patch.hpp" />
+    <ClInclude Include="main.h" />
     <ClInclude Include="SAMP\RakNet\AutopatcherPatchContext.h" />
     <ClInclude Include="SAMP\RakNet\AutopatcherRepositoryInterface.h" />
     <ClInclude Include="SAMP\RakNet\BigTypes.h" />
