--- a/SAMP_API_ONE_HEADER/SAMP_API_ONE_HEADER.vcxproj
+++ b/SAMP_API_ONE_HEADER/SAMP_API_ONE_HEADER.vcxproj
@@ -152,6 +152,60 @@
     <ClCompile Include="imgui\imgui_widgets.cpp" />
     <ClCompile Include="injector\hde\hde32.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SAMP\classes\AimStuff.cpp" />
+    <ClCompile Include="SAMP\classes\CActor.cpp" />
+    <ClCompile Include="SAMP\classes\CActorPool.cpp" />
+    <ClCompile Include="SAMP\classes\CAudio.cpp" />
+    <ClCompile Include="SAMP\classes\CAudioStream.cpp" />
+    <ClCompile Include="SAMP\classes\CCamera.cpp" />
+    <ClCompile Include="SAMP\classes\CChat.cpp" />
+    <ClCompile Include="SAMP\classes\CConfig.cpp" />
+    <ClCompile Include="SAMP\classes\CDeathWindow.cpp" />
+    <ClCompile Include="SAMP\classes\CDialog.cpp" />
+    <ClCompile Include="SAMP\classes\CEntity.cpp" />
+    <ClCompile Include="SAMP\classes\CFonts.cpp" />
+    <ClCompile Include="SAMP\classes\CGame.cpp" />
+    <ClCompile Include="SAMP\classes\CGangZonePool.cpp" />
+    <ClCompile Include="SAMP\classes\CHttpClient.cpp" />
+    <ClCompile Include="SAMP\classes\CInput.cpp" />
+    <ClCompile Include="SAMP\classes\CLabel.cpp" />
+    <ClCompile Include="SAMP\classes\CLabelPool.cpp" />
+    <ClCompile Include="SAMP\classes\CLicensePlate.cpp" />
+    <ClCompile Include="SAMP\classes\CLocalPlayer.cpp" />
+    <ClCompile Include="SAMP\classes\CMenu.cpp" />
+    <ClCompile Include="SAMP\classes\CMenuPool.cpp" />
+    <ClCompile Include="SAMP\classes\CNetGame.cpp" />
+    <ClCompile Include="SAMP\classes\CNetStats.cpp" />
+    <ClCompile Include="SAMP\classes\CObject.cpp" />
+    <ClCompile Include="SAMP\classes\CObjectPool.cpp" />
+    <ClCompile Include="SAMP\classes\CObjectSelection.cpp" />
+    <ClCompile Include="SAMP\classes\Commands.cpp" />
+    <ClCompile Include="SAMP\classes\common.cpp" />
+    <ClCompile Include="SAMP\classes\CPed.cpp" />
+    <ClCompile Include="SAMP\classes\CPickupPool.cpp" />
+    <ClCompile Include="SAMP\classes\CPlayerInfo.cpp" />
+    <ClCompile Include="SAMP\classes\CPlayerPool.cpp" />
+    <ClCompile Include="SAMP\classes\CPlayerTags.cpp" />
+    <ClCompile Include="SAMP\classes\CRect.cpp" />
+    <ClCompile Include="SAMP\classes\CRemotePlayer.cpp" />
+    <ClCompile Include="SAMP\classes\CScoreboard.cpp" />
+    <ClCompile Include="SAMP\classes\CSpawnScreen.cpp" />
+    <ClCompile Include="SAMP\classes\CTextDraw.cpp" />
+    <ClCompile Include="SAMP\classes\CTextDrawPool.cpp" />
+    <ClCompile Include="SAMP\classes\CTextDrawSelection.cpp" />
+    <ClCompile Include="SAMP\classes\CVector.cpp" />
+    <ClCompile Include="SAMP\classes\CVehicle.cpp" />
+    <ClCompile Include="SAMP\classes\CVehiclePool.cpp" />
+    <ClCompile Include="SAMP\classes\Debug.cpp" />
+    <ClCompile Include="SAMP\classes\DebugScript.cpp" />
+    <ClCompile Include="SAMP\classes\Exception.cpp" />
+    <ClCompile Include="SAMP\classes\GUI.cpp" />
+    <ClCompile Include="SAMP\classes\InputHandler.cpp" />
+    <ClCompile Include="SAMP\classes\KeyStuff.cpp" />
+    <ClCompile Include="SAMP\classes\RPC.cpp" />
+    <ClCompile Include="SAMP\classes\Scripting.cpp" />
+    <ClCompile Include="SAMP\classes\Settings.cpp" />
+    <ClCompile Include="SAMP\classes\VehicleSelection.cpp" />
     <ClCompile Include="SAMP\RakNet\BitStream.cpp" />
     <ClCompile Include="SAMP\RakNet\CheckSum.cpp" />
     <ClCompile Include="SAMP\RakNet\CommandParserInterface.cpp" />
@@ -222,6 +276,65 @@
     <ClInclude Include="injector\invoker.hpp" />
     <ClInclude Include="injector\patch.hpp" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="SAMP\classes\AimStuff.h" />
+    <ClInclude Include="SAMP\classes\Animation.h" />
+    <ClInclude Include="SAMP\classes\CActor.h" />
+    <ClInclude Include="SAMP\classes\CActorPool.h" />
+    <ClInclude Include="SAMP\classes\CAudio.h" />
+    <ClInclude Include="SAMP\classes\CAudioStream.h" />
+    <ClInclude Include="SAMP\classes\CCamera.h" />
+    <ClInclude Include="SAMP\classes\CChat.h" />
+    <ClInclude Include="SAMP\classes\CConfig.h" />
+    <ClInclude Include="SAMP\classes\CDeathWindow.h" />
+    <ClInclude Include="SAMP\classes\CDialog.h" />
+    <ClInclude Include="SAMP\classes\CEntity.h" />
+    <ClInclude Include="SAMP\classes\CFonts.h" />
+    <ClInclude Include="SAMP\classes\CGame.h" />
+    <ClInclude Include="SAMP\classes\CGangZonePool.h" />
+    <ClInclude Include="SAMP\classes\CHttpClient.h" />
+    <ClInclude Include="SAMP\classes\CInput.h" />
+    <ClInclude Include="SAMP\classes\CLabel.h" />
+    <ClInclude Include="SAMP\classes\CLabelPool.h" />
+    <ClInclude Include="SAMP\classes\CLicensePlate.h" />
+    <ClInclude Include="SAMP\classes\CLocalPlayer.h" />
+    <ClInclude Include="SAMP\classes\CMatrix.h" />
+    <ClInclude Include="SAMP\classes\CMenu.h" />
+    <ClInclude Include="SAMP\classes\CMenuPool.h" />
+    <ClInclude Include="SAMP\classes\CNetGame.h" />
+    <ClInclude Include="SAMP\classes\CNetStats.h" />
+    <ClInclude Include="SAMP\classes\CObject.h" />
+    <ClInclude Include="SAMP\classes\CObjectPool.h" />
+    <ClInclude Include="SAMP\classes\CObjectSelection.h" />
+    <ClInclude Include="SAMP\classes\Commands.h" />
+    <ClInclude Include="SAMP\classes\common.h" />
+    <ClInclude Include="SAMP\classes\ControllerState.h" />
+    <ClInclude Include="SAMP\classes\CPed.h" />
+    <ClInclude Include="SAMP\classes\CPickupPool.h" />
+    <ClInclude Include="SAMP\classes\CPlayerInfo.h" />
+    <ClInclude Include="SAMP\classes\CPlayerPool.h" />
+    <ClInclude Include="SAMP\classes\CPlayerTags.h" />
+    <ClInclude Include="SAMP\classes\CRect.h" />
+    <ClInclude Include="SAMP\classes\CRemotePlayer.h" />
+    <ClInclude Include="SAMP\classes\CScoreboard.h" />
+    <ClInclude Include="SAMP\classes\CSpawnScreen.h" />
+    <ClInclude Include="SAMP\classes\CTextDraw.h" />
+    <ClInclude Include="SAMP\classes\CTextDrawPool.h" />
+    <ClInclude Include="SAMP\classes\CTextDrawSelection.h" />
+    <ClInclude Include="SAMP\classes\CVector.h" />
+    <ClInclude Include="SAMP\classes\CVehicle.h" />
+    <ClInclude Include="SAMP\classes\CVehiclePool.h" />
+    <ClInclude Include="SAMP\classes\Debug.h" />
+    <ClInclude Include="SAMP\classes\DebugScript.h" />
+    <ClInclude Include="SAMP\classes\Exception.h" />
+    <ClInclude Include="SAMP\classes\GUI.h" />
+    <ClInclude Include="SAMP\classes\InputHandler.h" />
+    <ClInclude Include="SAMP\classes\KeyStuff.h" />
+    <ClInclude Include="SAMP\classes\Packets.h" />
+    <ClInclude Include="SAMP\classes\RPC.h" />
+    <ClInclude Include="SAMP\classes\Scripting.h" />
+    <ClInclude Include="SAMP\classes\Settings.h" />
+    <ClInclude Include="SAMP\classes\SpecialAction.h" />
+    <ClInclude Include="SAMP\classes\VehicleSelection.h" />
     <ClInclude Include="SAMP\RakNet\AutopatcherPatchContext.h" />
     <ClInclude Include="SAMP\RakNet\AutopatcherRepositoryInterface.h" />
     <ClInclude Include="SAMP\RakNet\BigTypes.h" />
